--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DEBUG=True
-DB_URL=mysql://root:123456@localhost:3306/meilisync
+DB_URL=mysql://root:msmiss6833@localhost:3306/meilisync
 REDIS_URL=redis://localhost:6379/0
-SECRET_KEY=123456
+SECRET_KEY=2VItrow2zJCoWbdQPoMKU+pedKyivMqdWKQ1gIeIRrg=
 LICENSE=license.txt
