--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   meilisync-admin:
     image: ghcr.io/long2ice/meilisync-admin/meilisync-admin
     restart: always
+    ports:
+      - "8080:8000"
     environment:
       - DB_URL=mysql://meilisync:msmiss6833@mysql:3306/meilisync_admin
       - REDIS_URL=redis://redis:6379/0
